src/parser/parser.output
Terminais sem uso na gramática

    IFX


Gramática

    0 $accept: program $end

    1 program: function_definition_list

    2 function_definition_list: function_definition_list function_definition
    3                         | function_definition

    4 $@1: ε

    5 function_definition: INT ID LPAREN RPAREN LBRACE $@1 statement_list RBRACE

    6 statement_list: statement_list statement
    7               | ε

    8 statement: matched_statement
    9          | unmatched_statement

   10 matched_statement: declaration SEMICOLON
   11                  | assignment_statement SEMICOLON
   12                  | return_statement SEMICOLON
   13                  | while_statement
   14                  | IF LPAREN relational_expression RPAREN matched_statement ELSE matched_statement
   15                  | block

   16 unmatched_statement: IF LPAREN relational_expression RPAREN statement
   17                    | IF LPAREN relational_expression RPAREN matched_statement ELSE unmatched_statement

   18 $@2: ε

   19 block: LBRACE $@2 statement_list RBRACE

   20 declaration: INT ID
   21            | FLOAT ID

   22 assignment_statement: ID ASSIGN expression

   23 expression: expression ADD term
   24           | expression SUB term
   25           | term

   26 term: term MUL factor
   27     | term DIV factor
   28     | factor

   29 factor: NUMBER
   30       | ID
   31       | LPAREN expression RPAREN

   32 relational_expression: expression EQ expression
   33                      | expression NE expression
   34                      | expression LT expression
   35                      | expression GT expression
   36                      | expression LE expression
   37                      | expression GE expression

   38 while_statement: WHILE LPAREN relational_expression RPAREN block

   39 return_statement: RETURN expression


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    ID <sval> (258) 5 20 21 22 30
    NUMBER <sval> (259) 29
    INT (260) 5 20
    FLOAT (261) 21
    IF (262) 14 16 17
    ELSE (263) 14 17
    WHILE (264) 38
    RETURN (265) 39
    ASSIGN (266) 22
    ADD (267) 23
    SUB (268) 24
    MUL (269) 26
    DIV (270) 27
    EQ (271) 32
    NE (272) 33
    LT (273) 34
    GT (274) 35
    LE (275) 36
    GE (276) 37
    LPAREN (277) 5 14 16 17 31 38
    RPAREN (278) 5 14 16 17 31 38
    LBRACE (279) 5 19
    RBRACE (280) 5 19
    SEMICOLON (281) 10 11 12
    IFX (282)


Não terminais com as regras onde eles aparecem

    $accept (28)
        à esquerda: 0
    program <node> (29)
        à esquerda: 1
        à direita: 0
    function_definition_list <node> (30)
        à esquerda: 2 3
        à direita: 1 2
    function_definition <node> (31)
        à esquerda: 5
        à direita: 2 3
    $@1 (32)
        à esquerda: 4
        à direita: 5
    statement_list <node> (33)
        à esquerda: 6 7
        à direita: 5 6 19
    statement <node> (34)
        à esquerda: 8 9
        à direita: 6 16
    matched_statement <node> (35)
        à esquerda: 10 11 12 13 14 15
        à direita: 8 14 17
    unmatched_statement <node> (36)
        à esquerda: 16 17
        à direita: 9 17
    block <node> (37)
        à esquerda: 19
        à direita: 15 38
    $@2 (38)
        à esquerda: 18
        à direita: 19
    declaration <node> (39)
        à esquerda: 20 21
        à direita: 10
    assignment_statement <node> (40)
        à esquerda: 22
        à direita: 11
    expression <node> (41)
        à esquerda: 23 24 25
        à direita: 22 23 24 31 32 33 34 35 36 37 39
    term <node> (42)
        à esquerda: 26 27 28
        à direita: 23 24 25 26 27
    factor <node> (43)
        à esquerda: 29 30 31
        à direita: 26 27 28
    relational_expression <node> (44)
        à esquerda: 32 33 34 35 36 37
        à direita: 14 16 17 38
    while_statement <node> (45)
        à esquerda: 38
        à direita: 13
    return_statement <node> (46)
        à esquerda: 39
        à direita: 12


Estado 0

    0 $accept: • program $end

    INT  deslocar, e ir ao estado 1

    program                   ir ao estado 2
    function_definition_list  ir ao estado 3
    function_definition       ir ao estado 4


Estado 1

    5 function_definition: INT • ID LPAREN RPAREN LBRACE $@1 statement_list RBRACE

    ID  deslocar, e ir ao estado 5


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 6


Estado 3

    1 program: function_definition_list •
    2 function_definition_list: function_definition_list • function_definition

    INT  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 1 (program)

    function_definition  ir ao estado 7


Estado 4

    3 function_definition_list: function_definition •

    $padrão  reduzir usando a regra 3 (function_definition_list)


Estado 5

    5 function_definition: INT ID • LPAREN RPAREN LBRACE $@1 statement_list RBRACE

    LPAREN  deslocar, e ir ao estado 8


Estado 6

    0 $accept: program $end •

    $padrão  aceitar


Estado 7

    2 function_definition_list: function_definition_list function_definition •

    $padrão  reduzir usando a regra 2 (function_definition_list)


Estado 8

    5 function_definition: INT ID LPAREN • RPAREN LBRACE $@1 statement_list RBRACE

    RPAREN  deslocar, e ir ao estado 9


Estado 9

    5 function_definition: INT ID LPAREN RPAREN • LBRACE $@1 statement_list RBRACE

    LBRACE  deslocar, e ir ao estado 10


Estado 10

    5 function_definition: INT ID LPAREN RPAREN LBRACE • $@1 statement_list RBRACE

    $padrão  reduzir usando a regra 4 ($@1)

    $@1  ir ao estado 11


Estado 11

    5 function_definition: INT ID LPAREN RPAREN LBRACE $@1 • statement_list RBRACE

    $padrão  reduzir usando a regra 7 (statement_list)

    statement_list  ir ao estado 12


Estado 12

    5 function_definition: INT ID LPAREN RPAREN LBRACE $@1 statement_list • RBRACE
    6 statement_list: statement_list • statement

    ID      deslocar, e ir ao estado 13
    INT     deslocar, e ir ao estado 14
    FLOAT   deslocar, e ir ao estado 15
    IF      deslocar, e ir ao estado 16
    WHILE   deslocar, e ir ao estado 17
    RETURN  deslocar, e ir ao estado 18
    LBRACE  deslocar, e ir ao estado 19
    RBRACE  deslocar, e ir ao estado 20

    statement             ir ao estado 21
    matched_statement     ir ao estado 22
    unmatched_statement   ir ao estado 23
    block                 ir ao estado 24
    declaration           ir ao estado 25
    assignment_statement  ir ao estado 26
    while_statement       ir ao estado 27
    return_statement      ir ao estado 28


Estado 13

   22 assignment_statement: ID • ASSIGN expression

    ASSIGN  deslocar, e ir ao estado 29


Estado 14

   20 declaration: INT • ID

    ID  deslocar, e ir ao estado 30


Estado 15

   21 declaration: FLOAT • ID

    ID  deslocar, e ir ao estado 31


Estado 16

   14 matched_statement: IF • LPAREN relational_expression RPAREN matched_statement ELSE matched_statement
   16 unmatched_statement: IF • LPAREN relational_expression RPAREN statement
   17                    | IF • LPAREN relational_expression RPAREN matched_statement ELSE unmatched_statement

    LPAREN  deslocar, e ir ao estado 32


Estado 17

   38 while_statement: WHILE • LPAREN relational_expression RPAREN block

    LPAREN  deslocar, e ir ao estado 33


Estado 18

   39 return_statement: RETURN • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 37
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 19

   19 block: LBRACE • $@2 statement_list RBRACE

    $padrão  reduzir usando a regra 18 ($@2)

    $@2  ir ao estado 40


Estado 20

    5 function_definition: INT ID LPAREN RPAREN LBRACE $@1 statement_list RBRACE •

    $padrão  reduzir usando a regra 5 (function_definition)


Estado 21

    6 statement_list: statement_list statement •

    $padrão  reduzir usando a regra 6 (statement_list)


Estado 22

    8 statement: matched_statement •

    $padrão  reduzir usando a regra 8 (statement)


Estado 23

    9 statement: unmatched_statement •

    $padrão  reduzir usando a regra 9 (statement)


Estado 24

   15 matched_statement: block •

    $padrão  reduzir usando a regra 15 (matched_statement)


Estado 25

   10 matched_statement: declaration • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 41


Estado 26

   11 matched_statement: assignment_statement • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 42


Estado 27

   13 matched_statement: while_statement •

    $padrão  reduzir usando a regra 13 (matched_statement)


Estado 28

   12 matched_statement: return_statement • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 43


Estado 29

   22 assignment_statement: ID ASSIGN • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 44
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 30

   20 declaration: INT ID •

    $padrão  reduzir usando a regra 20 (declaration)


Estado 31

   21 declaration: FLOAT ID •

    $padrão  reduzir usando a regra 21 (declaration)


Estado 32

   14 matched_statement: IF LPAREN • relational_expression RPAREN matched_statement ELSE matched_statement
   16 unmatched_statement: IF LPAREN • relational_expression RPAREN statement
   17                    | IF LPAREN • relational_expression RPAREN matched_statement ELSE unmatched_statement

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression             ir ao estado 45
    term                   ir ao estado 38
    factor                 ir ao estado 39
    relational_expression  ir ao estado 46


Estado 33

   38 while_statement: WHILE LPAREN • relational_expression RPAREN block

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression             ir ao estado 45
    term                   ir ao estado 38
    factor                 ir ao estado 39
    relational_expression  ir ao estado 47


Estado 34

   30 factor: ID •

    $padrão  reduzir usando a regra 30 (factor)


Estado 35

   29 factor: NUMBER •

    $padrão  reduzir usando a regra 29 (factor)


Estado 36

   31 factor: LPAREN • expression RPAREN

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 48
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 37

   23 expression: expression • ADD term
   24           | expression • SUB term
   39 return_statement: RETURN expression •

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 39 (return_statement)


Estado 38

   25 expression: term •
   26 term: term • MUL factor
   27     | term • DIV factor

    MUL  deslocar, e ir ao estado 51
    DIV  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 25 (expression)


Estado 39

   28 term: factor •

    $padrão  reduzir usando a regra 28 (term)


Estado 40

   19 block: LBRACE $@2 • statement_list RBRACE

    $padrão  reduzir usando a regra 7 (statement_list)

    statement_list  ir ao estado 53


Estado 41

   10 matched_statement: declaration SEMICOLON •

    $padrão  reduzir usando a regra 10 (matched_statement)


Estado 42

   11 matched_statement: assignment_statement SEMICOLON •

    $padrão  reduzir usando a regra 11 (matched_statement)


Estado 43

   12 matched_statement: return_statement SEMICOLON •

    $padrão  reduzir usando a regra 12 (matched_statement)


Estado 44

   22 assignment_statement: ID ASSIGN expression •
   23 expression: expression • ADD term
   24           | expression • SUB term

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 22 (assignment_statement)


Estado 45

   23 expression: expression • ADD term
   24           | expression • SUB term
   32 relational_expression: expression • EQ expression
   33                      | expression • NE expression
   34                      | expression • LT expression
   35                      | expression • GT expression
   36                      | expression • LE expression
   37                      | expression • GE expression

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50
    EQ   deslocar, e ir ao estado 54
    NE   deslocar, e ir ao estado 55
    LT   deslocar, e ir ao estado 56
    GT   deslocar, e ir ao estado 57
    LE   deslocar, e ir ao estado 58
    GE   deslocar, e ir ao estado 59


Estado 46

   14 matched_statement: IF LPAREN relational_expression • RPAREN matched_statement ELSE matched_statement
   16 unmatched_statement: IF LPAREN relational_expression • RPAREN statement
   17                    | IF LPAREN relational_expression • RPAREN matched_statement ELSE unmatched_statement

    RPAREN  deslocar, e ir ao estado 60


Estado 47

   38 while_statement: WHILE LPAREN relational_expression • RPAREN block

    RPAREN  deslocar, e ir ao estado 61


Estado 48

   23 expression: expression • ADD term
   24           | expression • SUB term
   31 factor: LPAREN expression • RPAREN

    ADD     deslocar, e ir ao estado 49
    SUB     deslocar, e ir ao estado 50
    RPAREN  deslocar, e ir ao estado 62


Estado 49

   23 expression: expression ADD • term

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    term    ir ao estado 63
    factor  ir ao estado 39


Estado 50

   24 expression: expression SUB • term

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    term    ir ao estado 64
    factor  ir ao estado 39


Estado 51

   26 term: term MUL • factor

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    factor  ir ao estado 65


Estado 52

   27 term: term DIV • factor

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    factor  ir ao estado 66


Estado 53

    6 statement_list: statement_list • statement
   19 block: LBRACE $@2 statement_list • RBRACE

    ID      deslocar, e ir ao estado 13
    INT     deslocar, e ir ao estado 14
    FLOAT   deslocar, e ir ao estado 15
    IF      deslocar, e ir ao estado 16
    WHILE   deslocar, e ir ao estado 17
    RETURN  deslocar, e ir ao estado 18
    LBRACE  deslocar, e ir ao estado 19
    RBRACE  deslocar, e ir ao estado 67

    statement             ir ao estado 21
    matched_statement     ir ao estado 22
    unmatched_statement   ir ao estado 23
    block                 ir ao estado 24
    declaration           ir ao estado 25
    assignment_statement  ir ao estado 26
    while_statement       ir ao estado 27
    return_statement      ir ao estado 28


Estado 54

   32 relational_expression: expression EQ • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 68
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 55

   33 relational_expression: expression NE • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 69
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 56

   34 relational_expression: expression LT • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 70
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 57

   35 relational_expression: expression GT • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 71
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 58

   36 relational_expression: expression LE • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 72
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 59

   37 relational_expression: expression GE • expression

    ID      deslocar, e ir ao estado 34
    NUMBER  deslocar, e ir ao estado 35
    LPAREN  deslocar, e ir ao estado 36

    expression  ir ao estado 73
    term        ir ao estado 38
    factor      ir ao estado 39


Estado 60

   14 matched_statement: IF LPAREN relational_expression RPAREN • matched_statement ELSE matched_statement
   16 unmatched_statement: IF LPAREN relational_expression RPAREN • statement
   17                    | IF LPAREN relational_expression RPAREN • matched_statement ELSE unmatched_statement

    ID      deslocar, e ir ao estado 13
    INT     deslocar, e ir ao estado 14
    FLOAT   deslocar, e ir ao estado 15
    IF      deslocar, e ir ao estado 16
    WHILE   deslocar, e ir ao estado 17
    RETURN  deslocar, e ir ao estado 18
    LBRACE  deslocar, e ir ao estado 19

    statement             ir ao estado 74
    matched_statement     ir ao estado 75
    unmatched_statement   ir ao estado 23
    block                 ir ao estado 24
    declaration           ir ao estado 25
    assignment_statement  ir ao estado 26
    while_statement       ir ao estado 27
    return_statement      ir ao estado 28


Estado 61

   38 while_statement: WHILE LPAREN relational_expression RPAREN • block

    LBRACE  deslocar, e ir ao estado 19

    block  ir ao estado 76


Estado 62

   31 factor: LPAREN expression RPAREN •

    $padrão  reduzir usando a regra 31 (factor)


Estado 63

   23 expression: expression ADD term •
   26 term: term • MUL factor
   27     | term • DIV factor

    MUL  deslocar, e ir ao estado 51
    DIV  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 23 (expression)


Estado 64

   24 expression: expression SUB term •
   26 term: term • MUL factor
   27     | term • DIV factor

    MUL  deslocar, e ir ao estado 51
    DIV  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 24 (expression)


Estado 65

   26 term: term MUL factor •

    $padrão  reduzir usando a regra 26 (term)


Estado 66

   27 term: term DIV factor •

    $padrão  reduzir usando a regra 27 (term)


Estado 67

   19 block: LBRACE $@2 statement_list RBRACE •

    $padrão  reduzir usando a regra 19 (block)


Estado 68

   23 expression: expression • ADD term
   24           | expression • SUB term
   32 relational_expression: expression EQ expression •

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 32 (relational_expression)


Estado 69

   23 expression: expression • ADD term
   24           | expression • SUB term
   33 relational_expression: expression NE expression •

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 33 (relational_expression)


Estado 70

   23 expression: expression • ADD term
   24           | expression • SUB term
   34 relational_expression: expression LT expression •

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 34 (relational_expression)


Estado 71

   23 expression: expression • ADD term
   24           | expression • SUB term
   35 relational_expression: expression GT expression •

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 35 (relational_expression)


Estado 72

   23 expression: expression • ADD term
   24           | expression • SUB term
   36 relational_expression: expression LE expression •

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 36 (relational_expression)


Estado 73

   23 expression: expression • ADD term
   24           | expression • SUB term
   37 relational_expression: expression GE expression •

    ADD  deslocar, e ir ao estado 49
    SUB  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 37 (relational_expression)


Estado 74

   16 unmatched_statement: IF LPAREN relational_expression RPAREN statement •

    $padrão  reduzir usando a regra 16 (unmatched_statement)


Estado 75

    8 statement: matched_statement •
   14 matched_statement: IF LPAREN relational_expression RPAREN matched_statement • ELSE matched_statement
   17 unmatched_statement: IF LPAREN relational_expression RPAREN matched_statement • ELSE unmatched_statement

    ELSE  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 8 (statement)


Estado 76

   38 while_statement: WHILE LPAREN relational_expression RPAREN block •

    $padrão  reduzir usando a regra 38 (while_statement)


Estado 77

   14 matched_statement: IF LPAREN relational_expression RPAREN matched_statement ELSE • matched_statement
   17 unmatched_statement: IF LPAREN relational_expression RPAREN matched_statement ELSE • unmatched_statement

    ID      deslocar, e ir ao estado 13
    INT     deslocar, e ir ao estado 14
    FLOAT   deslocar, e ir ao estado 15
    IF      deslocar, e ir ao estado 16
    WHILE   deslocar, e ir ao estado 17
    RETURN  deslocar, e ir ao estado 18
    LBRACE  deslocar, e ir ao estado 19

    matched_statement     ir ao estado 78
    unmatched_statement   ir ao estado 79
    block                 ir ao estado 24
    declaration           ir ao estado 25
    assignment_statement  ir ao estado 26
    while_statement       ir ao estado 27
    return_statement      ir ao estado 28


Estado 78

   14 matched_statement: IF LPAREN relational_expression RPAREN matched_statement ELSE matched_statement •

    $padrão  reduzir usando a regra 14 (matched_statement)


Estado 79

   17 unmatched_statement: IF LPAREN relational_expression RPAREN matched_statement ELSE unmatched_statement •

    $padrão  reduzir usando a regra 17 (unmatched_statement)
